# WindowOpen

./: .gitignore  config.json  history.py  main.py  notifier.py  program_settings.py  pyproject.toml
sources/: bme280_source.py  open_meteo_source.py  open_weather_map_source.py  source.py
tests/: mock_source.py  test_history.py  test_main.py  test_open_meteo_source.py  test_settings.py  test_source.py
