[project]
name = "windowopen"
version = "0.1.0"
description = "A program to notify you when to open the windows to cool the house down."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "n"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psychrolib (>=2.5.0,<3.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
